--- a/asesoresdigitales.html
+++ b/asesoresdigitales.html
@@ -23,19 +23,19 @@
 		<div class="opcion">
 			<figure><h3>Legales</h3>
 			<br>
-			<img src="C:\Users\sebas\Documents\LeWAgon FrontEnd\LandingPage\imagenes\legales.jpg">
+			<img src="\legales.jpg">
 			</figure>
 		</div>
 		<div class="opcion">
 			<figure><h3>Financieros</h3>
 			<br>
-			<img src="C:\Users\sebas\Documents\LeWAgon FrontEnd\LandingPage\imagenes\contabilidad.jpg">
+			<img src="\imagenes\contabilidad.jpg">
 			</figure>
 		</div>
 		<div class="opcion">
 			<figure><h3>Marketing</h3>
 			<br>
-			<img src="C:\Users\sebas\Documents\LeWAgon FrontEnd\LandingPage\imagenes\Marketing.png">
+			<img src="\imagenes\Marketing.png">
 			</figure>
 		</div>
 	</div>
@@ -43,7 +43,7 @@
 	<br>	
 	<h5> ZetaCreaciones &reg;</h5>
 		<div class="logoinsta">
-			<img src="C:\Users\sebas\Documents\LeWAgon FrontEnd\LandingPage\imagenes\Instanegro.jpg">
+			<img src="\imagenes\Instanegro.jpg">
 			<h6>&commat;Zebastian.27 </h6>
 				</div>				
     </div>
