--- a/asesoresdigitales.html
+++ b/asesoresdigitales.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Asesores Digitales</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/estiloasesores.css">
+	<link rel="stylesheet" type="text/css" href="css/estiloasesores.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -23,19 +23,19 @@
 		<div class="opcion">
 			<figure><h3>Legales</h3>
 			<br>
-			<img src=".\imagenes\legales.jpg">
+			<img src=".\img\legales.jpg">
 			</figure>
 		</div>
 		<div class="opcion">
 			<figure><h3>Financieros</h3>
 			<br>
-			<img src=".\imagenes\contabilidad.jpg">
+			<img src=".\img\contabilidad.jpg">
 			</figure>
 		</div>
 		<div class="opcion">
 			<figure><h3>Marketing</h3>
 			<br>
-			<img src=".\imagenes\Marketing.png">
+			<img src=".\img\marketing.png">
 			</figure>
 		</div>
 	</div>
@@ -43,7 +43,7 @@
 	<br>	
 	<h5> ZetaCreaciones &reg;</h5>
 		<div class="logoinsta">
-			<img src=".\imagenes\Instanegro.jpg">
+			<img src=".\img\instanegro.jpg">
 			<h6>&commat;Zebastian.27 </h6>
 				</div>				
     </div>
