--- a/asesoresdigitales.html
+++ b/asesoresdigitales.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Asesores Digitales</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/estiloasesores.css">
+	<link rel="stylesheet" type="text/css" href="./css/estiloasesores.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
