--- a/asesoresdigitales.html
+++ b/asesoresdigitales.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div class="portada">    
+		<img src=".\img\portada1.jpg">
 		<h1>IMPULSA TU NEGOCIO</h1>
 		<h1> CON NOSOTROS</h1>
 		<h2>Empieza ahora</h2>
