--- a/asesoresdigitales.html
+++ b/asesoresdigitales.html
@@ -3,13 +3,11 @@
 <head>
 	<title>Asesores Digitales</title>
 	<meta charset="utf-8">
-	<link href="main/css/estiloasesores.css" rel="stylesheet" type="text/css">
+	<link href="./css/estiloasesores.css" rel="stylesheet" type="text/css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="portada">    
-		<img src=".\img\portada1.jpg">
 		<h1>IMPULSA TU NEGOCIO</h1>
 		<h1> CON NOSOTROS</h1>
 		<h2>Empieza ahora</h2>
